--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["lib/**/*.ts", "lib/**/*.tsx", "lib/**/*.vue", "demo/**/*.ts", "demo/**/*.tsx", "demo/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
